# shortener

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/shortener/: __main__.py  config.py  db.py  web.py
src/shortener/templates/: index.jinja2
tests/: conftest.py  test_db.py  test_web.py
tests/unit/: test_db.py
