[tool.poetry]
name = "shortener-test"
version = "0.1.0"
description = "URL shortening service"
authors = ["Andrew Svetlov <andrew.svetlov@gmail.com>"]
license = "Apache 2"
repository = "https://github.com/asvetlov/shortener"
packages = [
    { include = "shortener", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiohttp-jinja2 = "^1.5"
redis = "^4.3.4"
structlog = "^22.1.0"
types-redis = "^4.3.13"
pydantic = "^1.9.1"
Jinja2 = "^3.1.2"
pytest-aiohttp = "^1.0.4"
prometheus-async = "^22.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
mypy = "^0.971"
docker = "^5.0.3"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
